# devo-cert-prep

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
.claude/skills/development-guide-skill/: SKILL.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: README_USAGE.md  env.py
backend/alembic/versions/: 1c70f6e908b7_initial_migration_create_all_tables.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  bookmark.py  certification.py  question.py  session.py  topic.py  user.py  user_progress.py
docs/: project-brief.md  tech-stack.md
frontend/: .env.example  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/pages/: index.vue
