[project]
name = "backend"
version = "0.1.0"
description = "Cloud Certification Prep Platform Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "pydantic",
    "psycopg2-binary",
    "alembic",
    "python-jose[cryptography]",
    "google-auth",
    "boto3",
    "langgraph",
    "langchain-aws",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]
